Fix spacing on brackets stuff

--- a/webapp/sass/_brackets.scss
+++ b/webapp/sass/_brackets.scss
@@ -33,7 +33,7 @@
 
     &.selected {
       cursor: default;
-      top: 5px;
+      top: 6px;
 
       background-color: rgba(60,60,60,0.8);
 
